Prevent horizontal scroll when menu overflows (menu will be fixed in the future)

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
